[package]
name = "z-runtime"
version = "0.1.0"
edition = "2021"
authors = ["ZeroicAI <devzeroicai@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Runtime, execution engine, scheduling, and supervision for agents"
repository = "https://github.com/ZeroicAI/z-runtime"
documentation = "https://docs.rs/z-runtime"
keywords = ["agents", "runtime", "async", "scheduler", "supervision"]
categories = ["simulation", "asynchronous"]
readme = "README.md"

[dependencies]
z-core = { git = "https://github.com/ZeroicAI/z-core", branch = "main" }
z-messaging = { git = "https://github.com/ZeroicAI/z-messaging", branch = "main" }
z-cognition = { git = "https://github.com/ZeroicAI/z-cognition", branch = "main" }

async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
num_cpus = "1.16"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }

[[bench]]
name = "spawn_benchmark"
harness = false

[[bench]]
name = "throughput_benchmark"
harness = false

[[bin]]
name = "web"
path = "src/bin/web.rs"

[dependencies.axum]
version = "0.7"
features = ["json"]
